--- a/public/site/main.css
+++ b/public/site/main.css
@@ -7,7 +7,7 @@ html, body {
 }                
 
 body {  
-        background: #474b4c url("images/continuous.jpg");
+        background: #474b4c url("/site/continuous.jpg");
 }
 
 p, span, div, a {
@@ -93,7 +93,7 @@ a:hover {
         
 		.header {                
 			padding-top: 18px;
-            background: url("images/solid-sound.png") no-repeat center 10px;
+            background: url("/site/solid-sound.png") no-repeat center 10px;
                                        
         }
 		.header h1 { 
@@ -158,7 +158,7 @@ a:hover {
 @media (max-width: 600px) {
 
 		.header { 
-			background: url("images/solid-sound.png") 0px 5px / 300px 58px no-repeat;
+			background: url("/site/solid-sound.png") 0px 5px / 300px 58px no-repeat;
             height: 110px;                
 		}
 
