--- a/public/site/main.css
+++ b/public/site/main.css
@@ -10,6 +10,14 @@ body {
         background: #474b4c url("/site/continuous.jpg");
 }
 
+body > div {
+        position: relative;
+        min-width: 380px;
+        max-width: 950px;
+        margin: 0 auto;
+        height: 100%;              
+}
+
 p, span, div, a {
         font-family: 'Interstate','Lucida Grande','Lucida Sans Unicode', sans-serif;
         color: #242D38;
@@ -39,13 +47,7 @@ a:hover {
         text-decoration: underline;
 }
 
-.paper {
-        position: relative;
-        min-width: 380px;
-        max-width: 950px;
-        margin: 0 auto;
-        height: 100%;              
-}
+
 
 /* --- Header & Menu ------------------*/
 .header h1 span { 
