--- a/public/site/main.css
+++ b/public/site/main.css
@@ -414,3 +414,6 @@ h3.head-blue {
 
 
 
+.facebookBox {
+	float:right; width: 370px; background: rgba(100,100,100,0.4); margin-top: 20px; margin-left:20px; min-height: 200px; padding: 0px 0px 2px 0px;
+}
