--- a/public/site/main.css
+++ b/public/site/main.css
@@ -128,7 +128,7 @@ a:hover {
   .content h3 {
     font-size: 25px;
     padding-left: 5px;
-    margin: 5px 23px 0px 15px !important;
+    margin: 8px 0px 0px 0px !important;
   }
 
   .content p,
@@ -149,10 +149,6 @@ a:hover {
 
   .smallGap {
     margin-top: 14px;
-  }
-
-  .article-indent {
-    margin: 0px 29px 0px 20px;
   }
 
   .boxes .box {
@@ -207,10 +203,6 @@ a:hover {
   .content h2 {
     font-size: 45px;
     letter-spacing: 0.07em;
-  }
-
-  .article-indent {
-    margin: 0px 8px 0px 8px;
   }
 
   .mediumGap {
@@ -375,7 +367,6 @@ h3.head-blue {
   display: inline-block;
   position: relative;
   vertical-align: top;
-  box-shadow: 5px 5px 10px #00000060;
 }
 
 .boxes .box .title {
@@ -388,22 +379,22 @@ h3.head-blue {
 }
 
 .boxes.orange .box .title {
-  background: #ffcf22;
+  background: #fde078;
 }
 
 .boxes.orange .box .body {
-  border: 3px solid #ffcf22;
+  border: 3px solid #fde078;
   background: #fff9e4;
 }
 
 .boxes.pink .box .title {
-  background: #aa22ff;
+  background: #78a6fd;
   color: #fff;
 }
 
 .boxes.pink .box .body {
-  border: 3px solid #aa22ff;
-  background: #f1ebf5;
+  border: 3px solid #78a6fd;
+  background: #e2e8f4;
 }
 
 .css-hidden {
