--- a/public/site/main.css
+++ b/public/site/main.css
@@ -260,7 +260,7 @@ a:hover {
 }
 
 .background-pale {
-  background: #ddd;
+  background: #f9f2d0;
 }
 
 .background-grey {
@@ -279,24 +279,10 @@ a:hover {
 
 .content h2 {
   color: #fff;
-  text-shadow: 1px 1px black, -1px -1px black, -1px 1px black, 1px -1px black;
-  animation: rave-color-text 8s infinite;
-  transition-timing-function: ease;
-}
-
-@keyframes rave-color-text {
-  30% {
-    color: #fff;
-  }
-  50% {
-    color: #2cf;
-  }
-  30% {
-    color: #fff;
-  }
-}
-
-.background-submenu {
+  background: #ffe773;
+  border-bottom: 2px solid #ff5500;
+  text-shadow: 3px 3px 2px#000000c0, -1px -1px black, -1px 1px black,
+    1px -1px black;
 }
 
 .background-submenu .title,
@@ -378,22 +364,31 @@ h3.head-blue {
 }
 
 .boxes.orange .box .title {
-  background: #fde078;
+  background: #ffcf50;
 }
 
 .boxes.orange .box .body {
-  border: 3px solid #fde078;
+  border: 3px solid #ffcf50;
+  background: #fff4dd;
+}
+
+.boxes.yellow .box .title {
+  background: #ffe773;
+}
+
+.boxes.yellow .box .body {
+  border: 3px solid #ffe773;
   background: #fff9e4;
 }
 
-.boxes.pink .box .title {
-  background: #78a6fd;
-  color: #fff;
+.boxes.blue .box .title {
+  background: #17a6ff;
+  color: #000;
 }
 
-.boxes.pink .box .body {
-  border: 3px solid #78a6fd;
-  background: #e2e8f4;
+.boxes.blue .box .body {
+  border: 3px solid #17a6ff;
+  background: #eef5fa;
 }
 
 .css-hidden {
