all colors are variables

--- a/styles/boxes.scss
+++ b/styles/boxes.scss
@@ -31,7 +31,7 @@
   
   .boxes.orange .box .body {
     border: 3px solid $orange-bold;
-    background: #fff4dd;
+    background: $orange-bold-background;
   }
   
   .boxes.yellow .box .title {
