--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,7 +1,7 @@
  
   /*-- Footer ----*/
   .footer {
-    background: #3339;
+    background: $footer-background;
     font-size: 12px;
     padding: 5px;
     color: $white;
