--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,6 +1,7 @@
 $white: #fff;
 $black: #000;
 
+$background_if_no_image: #474b4c;
 
 $pink-h: #F96D8F ;/* #f96dd5;  /* header */
 $pink: saturate(lighten($pink-h, 9), 20);
@@ -23,6 +24,7 @@ $blue-background: #eef5fa;
 
 $orange-bold: adjust-hue($pink-h, 60);
 $orange-bold-background: lighten($orange-bold, 20);
+
 $khaki: desaturate(lighten($orange-bold-background, 3) ,60);
 
 $yellow: adjust-hue($pink-h, 70); /* #ffe773; */
@@ -36,3 +38,19 @@ $blue-link: #04f;
 $orange-link: #f00;
 $khaki-link: #f50;
   
+/* new color call out */
+$a_link_default: #242d38;
+$footer-background: #3339;
+$black-verytrans: #000000c0;
+$black_translite: #0009;
+$content_background: #fff;
+$content_text: #111;
+$dark_grey: #333;
+
+
+$menu_button_bright: rgb(251,249,63);
+$menu_button_brighthot: lighten($menu_button_bright,50);
+
+$menu_button_inner_light: desaturate(darken(adjust-hue($menu_button_bright,-18) , 4), 8); //#FBBB3F;
+$menu_button_inner_dark: desaturate(darken(adjust-hue($menu_button_bright,-27) , 12), 8); //   #FC9045;
+$menu_button_shadow: desaturate(darken(adjust-hue($menu_button_bright,-27) , 20), 8); //   #FC9045;
