--- a/styles/common.scss
+++ b/styles/common.scss
@@ -12,7 +12,7 @@
   }
   
   body {
-    background: #474b4c url("/site/continuous.jpg");
+    background: $background_if_no_image url("/site/continuous.jpg");
   }
   
   body > div {
@@ -28,7 +28,7 @@
   div,
   a {
     font-family: "Interstate", "Lucida Grande", "Lucida Sans Unicode", sans-serif;
-    color: #242d38;
+    color: $a_link_default;
   }
   
   a {
