--- a/styles/titlemenu.scss
+++ b/styles/titlemenu.scss
@@ -3,7 +3,7 @@
   }
   
   .header-wrap {
-    background: #00000090;
+    background: $black_translite;
   }
   
   .header .menu {
@@ -32,10 +32,10 @@
     width: 100%;
     height: 100%;  
 
-    background: rgb(251,249,63);
-    background: radial-gradient(circle,#FBBB3F 0%,#FC9045 100%);
+    background: $menu_button_bright;
+    background: radial-gradient(circle,$menu_button_inner_light 0%,$menu_button_inner_dark 100%);
     border-radius: 4px;
-    box-shadow: inset -1px -1px 2px rgb(182, 135, 26);
+    box-shadow: inset -1px -1px 2px $menu_button_shadow;
     display: inline-flex;
     align-content: center;
     justify-content: center;
@@ -44,15 +44,15 @@
 
   }
   .menu ul li a div {
-    color: #000;
+    color: $black;
     font-weight: bold;
   }
   
   .menu ul li div.active,
   .menu ul li div:hover {
-    background: rgb(255,255,255);
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(254,255,150,1) 100%);
-    color: #000;
+    background: $menu_button_brighthot;
+    background: radial-gradient(circle, $menu_button_brighthot 0%, $menu_button_bright 100%);
+    color: $black;
   }
   
   /* WIDE settings */
