--- a/styles/titlemenu.scss
+++ b/styles/titlemenu.scss
@@ -15,14 +15,15 @@
     justify-content: space-evenly;
     list-style-type: none;    
     height: 40px;
+    margin-top:15px;
   }
   
   .menu ul li {
     position: relative;
     
-    margin: 0px 2px 0px 2px;
+    margin: 2px 2px 0px 2px;
     
-    width: 14%;      
+    width: 16%;      
     font-size: 11pt;        
     vertical-align: middle;    
     display:table-cell;
