--- a/styles/header.scss
+++ b/styles/header.scss
@@ -10,12 +10,9 @@
 
   
   h2 {
-    padding: 7px 0px 0px 5px;
-    
+    padding: 18px 0px 0px 5px;    
     letter-spacing: 0.07em;  
-    color: $white;
-    background: $yellow;
-    border-bottom: 2px solid $yellow-contrast;
+    color: $white;        
     letter-spacing: 0.07em;
     
   }
@@ -33,7 +30,11 @@
     background-color: $purple-h;
   }
 
-  h3.blue, h3.pink,  h3.purple
+  h3.kahki {
+    background-color: $khaki-h;
+  }
+
+  h3.blue, h3.pink,  h3.purple, h3.kahki
   {         
     color: $white;
     text-shadow: 1px 1px $black, -1px -1px $black, -1px 1px $black, 1px -1px $black;
